--- a/src/components/Cards.module.css
+++ b/src/components/Cards.module.css
@@ -12,11 +12,14 @@
     flex-direction: column;
     position: relative;
     top: -25%;
-    height: 500px;
-    width: 1000px;
+    height: 80vh;
+    width: 90vw;
     border-radius: 25px;
     padding: 50px;
     transform-origin: top;
+    box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.2);
+    transform: translateY(-10px);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .cardContainer .card h2 {
@@ -80,4 +83,9 @@
     height: 1px;
     background-color: gray;
     margin: 10px 0;
+}
+
+.cardContainer .card:hover {
+    transform: translateY(-20px);
+    box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.3);
 }
