--- a/src/components/Cards.module.css
+++ b/src/components/Cards.module.css
@@ -89,3 +89,24 @@
     transform: translateY(-20px);
     box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.3);
 }
+
+.verticalLine {
+    position: absolute;
+    left: 1.5%;
+    top: 50%;
+    transform: translateY(-50%);
+    height: 80%;
+    width: 0.1rem;
+    background-color: gray;
+    overflow: hidden;
+}
+
+.verticalLine::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 33.33%;
+    width: 100%;
+    background-color: black;
+}
